<resources>
    <string name="app_name">TeachIn</string>
    <string name="logo_description">App Logo</string>
    <string name="informationButton">New Information letter</string>
    <string name="responseButton">New Response letter</string>
    <string name="alreadyCreatedButton">Created letters</string>
    <string name="pickQR">Load a letter series to implement QR Code on it</string>
    <string name="loadedQR">QR-code has been successfully put onto your letters</string>
    <string name="loadDocument">Load Letter Series</string>
    <string name="viewDocument">View Letter Series</string>
    <string name="confirmLettersButton">Done</string>
    <string name="redoButton">Redo</string>
    <string name="listFirstEntry">Class Travel</string>
    <string name="listFirstEntryCount">3 of 4 read | 1 of 4 sent</string>
    <string name="listSecondEntry">Parents Talk</string>
    <string name="listSecondEntryCount">2 of 6 sent back | 3 of 6 read | 1 of 6 sent</string>
    <string name="listThirdEntry">HCI Presentation</string>
    <string name="listThirdEntryCount">0 of 6 sent back | 0 of 6 read | 6 of 6 sent</string>
    <string name="listThirdEntryCountUpdated">0 of 6 returned | 1 of 6 read | 5 of 6 sent</string>
    <string name="firstEntrySent">1 of 4</string>
    <string name="firstEntryRead">3 of 4</string>
    <string name="secondEntrySent">1 of 6</string>
    <string name="secondEntryRead">3 of 6</string>
    <string name="secondEntryReturned">2 of 6</string>
    <string name="secondEntryCompleted">0 of 6</string>
    <string name="entryHint">Letter title</string>

    <string name="child1">Anna</string>
    <string name="child2">Bob</string>
    <string name="child3">Catherina</string>
    <string name="child4">David</string>
    <string name="child5">Evelyn</string>
    <string name="child6">Fred</string>

    <string name="noneOfSix">0 of 6</string>
    <string name="oneOfSix">1 of 6</string>
    <string name="allOfSix">6 of 6</string>

    <string name="sendToAllText">Send To All</string>

    <string name="sent">SENT</string>
    <string name="read">READ</string>
    <string name="returned">SENT BACK</string>
    <string name="completed">COMPLETED</string>
    <string name="clear">Clear Filter</string>

    <string name="title_activity_load_screen">LoadScreen</string>
    <string name="title_activity_class_screen">ClassScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="ListItemDescription">ListItem</string>

    <string-array name="alreadyCreatedLetter">
        <item>Class travel</item>
        <item>Christmas singing</item>
        <item>Parents talk</item>
    </string-array>
</resources>
