<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateNewLetter">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="40dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="20dp"
            android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entryHint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/sendToAllText"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:background="@drawable/rounded_button"
            android:id="@+id/sendToAllButton"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/confirmLettersButton"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:id="@+id/continueButton"
            android:background="@drawable/rounded_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@+id/fredSwitch" android:layout_marginTop="30dp"/>
    <Switch
            android:text="@string/child1"
            android:layout_width="129dp"
            android:layout_height="72dp"
            android:id="@+id/annaSwitch"
            app:layout_constraintTop_toBottomOf="@+id/sendToAllButton" android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="35dp"/>
    <Switch
            android:text="@string/child2"
            android:layout_width="128dp"
            android:layout_height="72dp"
            android:id="@+id/bobSwitch"
            app:layout_constraintTop_toBottomOf="@+id/annaSwitch" android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="35dp"/>
    <Switch
            android:text="@string/child5"
            android:layout_width="128dp"
            android:layout_height="72dp"
            android:id="@+id/evelynSwitch"
            app:layout_constraintTop_toBottomOf="@+id/annaSwitch" android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="35dp"/>
    <Switch
            android:text="@string/child4"
            android:layout_width="128dp"
            android:layout_height="72dp"
            android:id="@+id/davidSwitch"
            app:layout_constraintTop_toBottomOf="@+id/sendToAllButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="35dp" android:layout_marginTop="30dp"/>
    <Switch
            android:text="@string/child3"
            android:layout_width="128dp"
            android:layout_height="72dp"
            android:id="@+id/catherinaSwitch"
            app:layout_constraintTop_toBottomOf="@+id/bobSwitch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp" android:layout_marginStart="35dp"/>
    <Switch
            android:text="@string/child6"
            android:layout_width="128dp"
            android:layout_height="72dp"
            android:id="@+id/fredSwitch"
            app:layout_constraintTop_toBottomOf="@+id/bobSwitch"
            android:layout_marginTop="30dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="35dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>