<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:id="@+id/sentButton"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/sent"
            android:text="@string/firstEntrySent"
            android:textColor="@drawable/rounded_text_color_inverted" android:layout_alignParentStart="true">
    </Button>

    <Button
            android:id="@+id/readButton"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:background="@drawable/completed"
            android:text="@string/firstEntryRead"
            android:textColor="@drawable/rounded_text_color"
            android:layout_marginTop="50dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="20dp">
    </Button>
    <TextView
            android:id="@+id/sentDescription"
            android:text="@string/sent"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginEnd="55dp"
            android:layout_alignEnd="@+id/sentButton" android:layout_alignStart="@+id/sentButton"/>
    <TextView
            android:id="@+id/readDescription"
            android:text="@string/read"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="54dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignStart="@+id/readButton"
            android:layout_marginEnd="54dp" android:layout_alignEnd="@+id/readButton"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/childrenList"
            android:layout_marginTop="110dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:backgroundTint="@color/colorAccent"
            app:fabCustomSize="70dp"
            app:maxImageSize="50dp"
            app:srcCompat="@drawable/ic_qr_scan"
            android:id="@+id/qrScan_floating_button"/>

</RelativeLayout>