<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="#FFFFFF"
                                                   tools:context=".MainActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="208dp"
            android:layout_height="192dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="105dp"
            android:adjustViewBounds="false"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo_description" app:srcCompat="@drawable/ic_teachin"/>
    <Button
            android:id="@+id/informationButton"
            android:layout_width="205dp"
            android:layout_height="35dp"
            android:layout_marginStart="161dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="161dp"
            android:background="@drawable/rounded_button"
            android:text="@string/informationButton"
            android:textColor="@drawable/rounded_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <Button
            android:id="@+id/responseButton"
            android:layout_width="205dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_button"
            android:text="@string/responseButton"
            android:textColor="@drawable/rounded_text_color"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/informationButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="98dp"
    />
    <Button
            android:text="@string/alreadyCreatedButton"
            android:layout_width="205dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_button"
            android:textColor="@drawable/rounded_text_color"
            android:id="@+id/alreadyCreatedButton"
            app:layout_constraintTop_toBottomOf="@+id/responseButton"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="98dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>