<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".LoadQR">

    <ImageView
            android:id="@+id/documentSVG"
            android:layout_width="262dp"
            android:layout_height="251dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="75dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loadQRHeader"
            app:srcCompat="@drawable/ic_document_full"
    />

    <ImageView
            android:id="@+id/qrCode"
            android:layout_width="109dp"
            android:layout_height="81dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/documentSVG"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/documentSVG"
            app:srcCompat="@drawable/ic_iconmonstr_qr_code_4"/>

    <TextView
            android:id="@+id/loadQRHeader"
            android:layout_width="340dp"
            android:layout_height="24dp"
            android:layout_marginTop="75dp"
            android:text="@string/loadedQR"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/viewDocumentButton"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_button"
            android:text="@string/viewDocument"
            android:textColor="@drawable/rounded_text_color"
            app:layout_constraintTop_toBottomOf="@+id/documentSVG"
            android:layout_marginTop="25dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/confirmLettersButton"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_button"
            android:textColor="@drawable/rounded_text_color"
            android:id="@+id/continueToClass"
            app:layout_constraintTop_toBottomOf="@+id/redoDocumentUpload"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="35dp"/>
    <Button
            android:text="@string/redoButton"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_button"
            android:textColor="@drawable/rounded_text_color"
            android:id="@+id/redoDocumentUpload" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/viewDocumentButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>